<!--Matthew Samms - NBCC-->
<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/computer_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/comp_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/player_image"
        app:srcCompat="@drawable/none" />

    <ImageView
        android:id="@+id/rock_imgbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/rock_button"
        android:tag="@integer/rock"
        android:onClick="playGame"
        app:layout_constraintEnd_toStartOf="@+id/paper_imgbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rock_button" />

    <ImageView
        android:id="@+id/paper_imgbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/paper_button"
        android:tag="@integer/paper"
        android:onClick="playGame"
        app:layout_constraintEnd_toStartOf="@+id/scissor_imgbutton"
        app:layout_constraintStart_toEndOf="@+id/rock_imgbutton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paper_button" />

    <ImageView
        android:id="@+id/scissor_imgbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="playGame"
        android:tag="@integer/scissor"
        android:contentDescription="@string/scissor_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paper_imgbutton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scissor_button" />

    <ImageView
        android:id="@+id/player_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/player_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/computer_image"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/none" />

    <TextView
        android:id="@+id/display_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/display_winner_text"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_image" />
</android.support.constraint.ConstraintLayout>